Updated text in all language json files

--- a/static/languages/da.json
+++ b/static/languages/da.json
@@ -1,31 +1,13 @@
 {
-  "heading": "Udbredelse af amfetaminbrug i Europa",
-  "subheading": "Prævalens af amfetaminbrug af unge voksne (15-34) i Europa i EU-landene i 2022",
-  "legend1": "Ingen tilgængelig data",
+  "heading": "Udbredelsen af amfetaminbrug i Europa",
+  "subheading": "Prævalens af amfetaminbrug blandt unge voksne (15-34) i Europa i lande i Den Europæiske Union i 2022",
+  "legend1": "Ingen data tilgængelige",
   "tooltip1": "af unge voksne",
   "textSourceDescription": "Kilde",
-  "textSource": "EONN",
-  "textNoteDescription": "Bemærk",
-  "textNote": "Undersøgelser, som samler amfetamin og metamfetamin, udført af 25 EU-lande mellem 2016 og 2022, tyder på, at 1,3 millioner unge voksne (15 til 34) brugte amfetamin i løbet af det sidste år (1,3 % af denne aldersgruppe).",
-  "textDataAccess": "Få adgang til data",
+  "textSource": "EMCDDA",
+  "textNoteDescription": "Note",
+  "textNote": "Undersøgelser, der grupperer amfetamin og metamfetamin sammen, udført af 25 EU-lande mellem 2016 og 2022, tyder på, at 1,3 millioner unge voksne (15 til 34) brugte amfetamin i løbet af det seneste år (1,3 % af denne aldersgruppe).",
+  "textDataAccess": "Få adgang til dataene",
   "linkDataAccess": "https://www.emcdda.europa.eu/publications/european-drug-report/2023/synthetic-stimulants_en",
-  "textCountryClick": "Klik for mere info",
-  "extraInfoText_BE": "",
-  "extraInfoLink_BE": "",
-  "extraInfoText_DE": "",
-  "extraInfoLink_DE": "",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "",
-  "extraInfoLink_IT": "",
-  "extraInfoText_LU": "",
-  "extraInfoLink_LU": "",
-  "extraInfoText_PL": "",
-  "extraInfoLink_PL": "",
-  "extraInfoText_RO": "",
-  "extraInfoLink_RO": "",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Klik for mere information"
 }
