--- a/static/languages/fi.json
+++ b/static/languages/fi.json
@@ -1,31 +1,13 @@
 {
-  "heading": "Amfetamiinin käytön yleisyys Euroopassa",
-  "subheading": "Amfetamiinin käytön yleisyys nuorilla aikuisilla (15-34) Euroopassa Euroopan unionin maissa vuonna 2022",
-  "legend1": "Tietoja ei ole saatavilla",
+  "heading": "Amfetamiinin käytön esiintyvyys Euroopassa",
+  "subheading": "Amfetamiinin käytön esiintyvyys nuorten aikuisten (15–34) keskuudessa Euroopassa Euroopan unionin maissa vuonna 2022",
+  "legend1": "Ei tietoja saatavilla",
   "tooltip1": "nuorista aikuisista",
   "textSourceDescription": "Lähde",
   "textSource": "EMCDDA",
   "textNoteDescription": "Huomautus",
-  "textNote": "Amfetamiinin ja metamfetamiinin ryhmittelevät tutkimukset 25 EU-maassa vuosina 2016–2022 osoittavat, että 1,3 miljoonaa nuorta aikuista (15–34) käytti amfetamiinia viimeisen vuoden aikana (1,3 % tästä ikäryhmästä).",
+  "textNote": "EU-maiden 25 maan vuosina 2016–2022 tekemät tutkimukset, joissa amfetamiini ja metamfetamiini ryhmitellään yhteen, viittaavat siihen, että 1,3 miljoonaa nuorta aikuista (15–34-vuotiasta) käytti amfetamiineja viimeisen vuoden aikana (1,3 % tästä ikäryhmästä).",
   "textDataAccess": "Käytä tietoja",
   "linkDataAccess": "https://www.emcdda.europa.eu/publications/european-drug-report/2023/synthetic-stimulants_en",
-  "textCountryClick": "Napsauta saadaksesi lisätietoja",
-  "extraInfoText_BE": "",
-  "extraInfoLink_BE": "",
-  "extraInfoText_DE": "",
-  "extraInfoLink_DE": "",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "",
-  "extraInfoLink_IT": "",
-  "extraInfoText_LU": "",
-  "extraInfoLink_LU": "",
-  "extraInfoText_PL": "",
-  "extraInfoLink_PL": "",
-  "extraInfoText_RO": "",
-  "extraInfoLink_RO": "",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Klikkaa saadaksesi lisätietoja"
 }
