--- a/static/languages/fr.json
+++ b/static/languages/fr.json
@@ -1,31 +1,13 @@
 {
-  "heading": "Prévalence de la consommation d’amphétamines en Europe",
+  "heading": "Prévalence de la consommation d'amphétamines en Europe",
   "subheading": "Prévalence de la consommation d'amphétamines chez les jeunes adultes (15-34 ans) en Europe dans les pays de l'Union européenne en 2022",
-  "legend1": "Pas de données disponibles",
+  "legend1": "Aucune donnée disponible",
   "tooltip1": "des jeunes adultes",
   "textSourceDescription": "Source",
   "textSource": "OEDT",
   "textNoteDescription": "Note",
-  "textNote": "Des enquêtes regroupant les amphétamines et les méthamphétamines, menées dans 25 pays de l’UE entre 2016 et 2022, suggèrent que 1,3 million de jeunes adultes (15 à 34 ans) ont consommé des amphétamines au cours de l’année écoulée (1,3 % de cette tranche d’âge).",
+  "textNote": "Des enquêtes regroupant l’amphétamine et la méthamphétamine, menées par 25 pays de l’UE entre 2016 et 2022, suggèrent que 1,3 million de jeunes adultes (15 à 34 ans) ont consommé des amphétamines au cours de l’année écoulée (1,3 % de cette tranche d’âge).",
   "textDataAccess": "Accéder aux données",
   "linkDataAccess": "https://www.emcdda.europa.eu/publications/european-drug-report/2023/synthetic-stimulants_en",
-  "textCountryClick": "Cliquez pour plus d'informations",
-  "extraInfoText_BE": "",
-  "extraInfoLink_BE": "",
-  "extraInfoText_DE": "",
-  "extraInfoLink_DE": "",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "",
-  "extraInfoLink_IT": "",
-  "extraInfoText_LU": "",
-  "extraInfoLink_LU": "",
-  "extraInfoText_PL": "",
-  "extraInfoLink_PL": "",
-  "extraInfoText_RO": "",
-  "extraInfoLink_RO": "",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Cliquez pour plus d'informations"
 }
