--- a/static/languages/ga.json
+++ b/static/languages/ga.json
@@ -1,31 +1,13 @@
 {
-  "heading": "Leitheadúlacht úsáide amfataimín san Eoraip",
-  "subheading": "Leitheadúlacht úsáide amfataimín ag daoine fásta óga (15-34) san Eoraip i dtíortha an Aontais Eorpaigh in 2022",
+  "heading": "Forleithne úsáid amfataimíne san Eoraip",
+  "subheading": "Forleithne úsáid amfataimíne i measc daoine óga fásta (15-34) san Eoraip i dtíortha an Aontais Eorpaigh in 2022",
   "legend1": "Níl aon sonraí ar fáil",
-  "tooltip1": "de dhaoine fásta óga",
+  "tooltip1": "de dhaoine óga fásta",
   "textSourceDescription": "Foinse",
   "textSource": "EMCDDA",
   "textNoteDescription": "Nóta",
-  "textNote": "Tugann suirbhéanna, a ghrúpálann amphetamine agus methamphetamine le chéile, a rinne 25 tír AE idir 2016 agus 2022 le fios gur bhain 1.3 milliún duine fásta óg (15 go 34) úsáid as amfataimíní le bliain anuas (1.3 % den aoisghrúpa seo).",
-  "textDataAccess": "Faigh rochtain ar na sonraí",
-  "linkDataAccess": "https://www.emcdda.europa.eu/publications/european-drug-report/2023/synthetic-stimulants_ga",
-  "textCountryClick": "Cliceáil le haghaidh tuilleadh eolais",
-  "extraInfoText_BE": "",
-  "extraInfoLink_BE": "",
-  "extraInfoText_DE": "",
-  "extraInfoLink_DE": "",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "",
-  "extraInfoLink_IT": "",
-  "extraInfoText_LU": "",
-  "extraInfoLink_LU": "",
-  "extraInfoText_PL": "",
-  "extraInfoLink_PL": "",
-  "extraInfoText_RO": "",
-  "extraInfoLink_RO": "",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textNote": "Tugann suirbhéanna, a ghrúpálann amfataimín agus meatamfetaimín le chéile, a rinne 25 tír san AE idir 2016 agus 2022, le fios gur úsáid 1.3 milliún duine óg fásta (15 go 34) amfataimíní le linn na bliana seo caite (1.3% den aoisghrúpa seo).",
+  "textDataAccess": "Rochtain ar na sonraí",
+  "linkDataAccess": "https://www.emcdda.europa.eu/publications/european-drug-report/2023/synthetic-stimulants_en",
+  "textCountryClick": "Cliceáil le haghaidh tuilleadh eolais"
 }
