--- a/static/languages/hr.json
+++ b/static/languages/hr.json
@@ -1,31 +1,13 @@
 {
   "heading": "Prevalencija upotrebe amfetamina u Europi",
-  "subheading": "Prevalencija upotrebe amfetamina među mladim odraslim osobama (15-34) u Europi u zemljama Europske unije u 2022.",
+  "subheading": "Prevalencija uporabe amfetamina među mladim odraslim osobama (15-34) u Europi u zemljama Europske unije u 2022. godini",
   "legend1": "Nema dostupnih podataka",
   "tooltip1": "mladih odraslih osoba",
   "textSourceDescription": "Izvor",
   "textSource": "EMCDDA",
   "textNoteDescription": "Bilješka",
-  "textNote": "Istraživanja koja grupiraju amfetamin i metamfetamin zajedno, a koja je provelo 25 zemalja EU-a između 2016. i 2022. pokazuju da je 1,3 milijuna mladih odraslih osoba (15 do 34) koristilo amfetamine tijekom prošle godine (1,3 % ove dobne skupine).",
-  "textDataAccess": "Pristupite podacima",
+  "textNote": "Istraživanja koja su provela 25 zemalja EU-a između 2016. i 2022. godine, a koja grupiraju amfetamin i metamfetamin, pokazuju da je 1,3 milijuna mladih odraslih osoba (od 15 do 34 godine) koristilo amfetamine tijekom prošle godine (1,3 % ove dobne skupine).",
+  "textDataAccess": "Pristup podacima",
   "linkDataAccess": "https://www.emcdda.europa.eu/publications/european-drug-report/2023/synthetic-stimulants_en",
-  "textCountryClick": "Kliknite za više informacija",
-  "extraInfoText_BE": "",
-  "extraInfoLink_BE": "",
-  "extraInfoText_DE": "",
-  "extraInfoLink_DE": "",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "",
-  "extraInfoLink_IT": "",
-  "extraInfoText_LU": "",
-  "extraInfoLink_LU": "",
-  "extraInfoText_PL": "",
-  "extraInfoLink_PL": "",
-  "extraInfoText_RO": "",
-  "extraInfoLink_RO": "",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Kliknite za više informacija"
 }
