--- a/static/languages/it.json
+++ b/static/languages/it.json
@@ -1,31 +1,13 @@
 {
-  "heading": "Prevalenza del consumo di anfetamine in Europa",
-  "subheading": "Prevalenza del consumo di anfetamine tra i giovani adulti (15-34 anni) in Europa nei paesi dell'Unione Europea nel 2022",
+  "heading": "Prevalenza dell'uso di anfetamine in Europa",
+  "subheading": "Prevalenza dell'uso di anfetamine tra i giovani adulti (15-34) in Europa nei paesi dell'Unione Europea nel 2022",
   "legend1": "Nessun dato disponibile",
   "tooltip1": "dei giovani adulti",
   "textSourceDescription": "Fonte",
   "textSource": "OEDT",
   "textNoteDescription": "Nota",
-  "textNote": "I sondaggi, che raggruppano insieme anfetamine e metanfetamine, condotti da 25 paesi dell’UE tra il 2016 e il 2022 suggeriscono che 1,3 milioni di giovani adulti (dai 15 ai 34 anni) hanno utilizzato anfetamine durante l’ultimo anno (1,3 % di questa fascia di età).",
+  "textNote": "I sondaggi, che raggruppano anfetamine e metanfetamine, condotti da 25 paesi dell'UE tra il 2016 e il 2022, suggeriscono che 1,3 milioni di giovani adulti (dai 15 ai 34 anni) hanno fatto uso di anfetamine nell'ultimo anno (l'1,3% di questa fascia d'età).",
   "textDataAccess": "Accedi ai dati",
   "linkDataAccess": "https://www.emcdda.europa.eu/publications/european-drug-report/2023/synthetic-stimulants_en",
-  "textCountryClick": "Fare clic per maggiori informazioni",
-  "extraInfoText_BE": "",
-  "extraInfoLink_BE": "",
-  "extraInfoText_DE": "",
-  "extraInfoLink_DE": "",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "",
-  "extraInfoLink_IT": "",
-  "extraInfoText_LU": "",
-  "extraInfoLink_LU": "",
-  "extraInfoText_PL": "",
-  "extraInfoLink_PL": "",
-  "extraInfoText_RO": "",
-  "extraInfoLink_RO": "",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Clicca per maggiori informazioni"
 }
