--- a/static/languages/lt.json
+++ b/static/languages/lt.json
@@ -1,31 +1,13 @@
 {
   "heading": "Amfetamino vartojimo paplitimas Europoje",
-  "subheading": "Jaunų suaugusiųjų (15-34 m.) amfetamino vartojimo paplitimas Europoje Europos Sąjungos šalyse 2022 m.",
+  "subheading": "Amfetamino vartojimo paplitimas tarp jaunų suaugusiųjų (15–34 m.) Europoje Europos Sąjungos šalyse 2022 m.",
   "legend1": "Nėra duomenų",
   "tooltip1": "jaunų suaugusiųjų",
   "textSourceDescription": "Šaltinis",
   "textSource": "EMCDDA",
   "textNoteDescription": "Pastaba",
-  "textNote": "25 ES šalyse 2016–2022 m. atlikti tyrimai, kuriuose amfetaminas ir metamfetaminas sugrupuoti kartu, rodo, kad 1,3 mln. jaunų suaugusiųjų (15–34 m.) per pastaruosius metus vartojo amfetaminus (1,3 proc. šios amžiaus grupės).",
-  "textDataAccess": "Pasiekite duomenis",
+  "textNote": "2016–2022 m. 25 ES šalyse atliktos apklausos, kuriose amfetaminas ir metamfetaminas buvo grupuojami kartu, rodo, kad per pastaruosius metus amfetaminus vartojo 1,3 mln. jaunų suaugusiųjų (15–34 metų) (1,3 % šios amžiaus grupės).",
+  "textDataAccess": "Prieiga prie duomenų",
   "linkDataAccess": "https://www.emcdda.europa.eu/publications/european-drug-report/2023/synthetic-stimulants_en",
-  "textCountryClick": "Spustelėkite norėdami gauti daugiau informacijos",
-  "extraInfoText_BE": "",
-  "extraInfoLink_BE": "",
-  "extraInfoText_DE": "",
-  "extraInfoLink_DE": "",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "",
-  "extraInfoLink_IT": "",
-  "extraInfoText_LU": "",
-  "extraInfoLink_LU": "",
-  "extraInfoText_PL": "",
-  "extraInfoLink_PL": "",
-  "extraInfoText_RO": "",
-  "extraInfoLink_RO": "",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Spustelėkite norėdami gauti daugiau informacijos"
 }
