--- a/static/languages/mt.json
+++ b/static/languages/mt.json
@@ -1,31 +1,13 @@
 {
   "heading": "Prevalenza tal-użu tal-amfetamina fl-Ewropa",
-  "subheading": "Prevalenza tal-użu tal-amfetamina ta' adulti żgħażagħ (15-34) fl-Ewropa f'pajjiżi tal-Unjoni Ewropea fl-2022",
-  "legend1": "Ebda data disponibbli",
-  "tooltip1": "ta’ adulti żgħażagħ",
+  "subheading": "Prevalenza tal-użu tal-amfetamina fost adulti żgħażagħ (15-34) fl-Ewropa f'pajjiżi tal-Unjoni Ewropea fl-2022",
+  "legend1": "L-ebda dejta disponibbli",
+  "tooltip1": "ta' adulti żgħażagħ",
   "textSourceDescription": "Sors",
   "textSource": "EMCDDA",
   "textNoteDescription": "Nota",
-  "textNote": "Stħarriġ, li jiġbor l-amfetamina u l-metamfetamina flimkien, li sar minn 25 pajjiż tal-UE bejn l-2016 u l-2022 jissuġġerixxi li 1.3 miljun adult żagħżugħ (15 sa 34) użaw l-amfetamini matul l-aħħar sena (1.3 % ta’ dan il-grupp ta’ età).",
-  "textDataAccess": "Aċċessa għad-data",
+  "textNote": "Stħarriġiet, li jiġbru l-amfetamina u l-metamfetamina flimkien, imwettqa minn 25 pajjiż tal-UE bejn l-2016 u l-2022 jissuġġerixxu li 1.3 miljun adult żagħżugħ (15 sa 34 sena) użaw amfetamini matul l-aħħar sena (1.3 % ta’ dan il-grupp ta’ età).",
+  "textDataAccess": "Aċċessa d-dejta",
   "linkDataAccess": "https://www.emcdda.europa.eu/publications/european-drug-report/2023/synthetic-stimulants_en",
-  "textCountryClick": "Ikklikkja għal aktar informazzjoni",
-  "extraInfoText_BE": "",
-  "extraInfoLink_BE": "",
-  "extraInfoText_DE": "",
-  "extraInfoLink_DE": "",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "",
-  "extraInfoLink_IT": "",
-  "extraInfoText_LU": "",
-  "extraInfoLink_LU": "",
-  "extraInfoText_PL": "",
-  "extraInfoLink_PL": "",
-  "extraInfoText_RO": "",
-  "extraInfoLink_RO": "",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Ikklikkja għal aktar tagħrif"
 }
