--- a/static/languages/pl.json
+++ b/static/languages/pl.json
@@ -6,26 +6,8 @@
   "textSourceDescription": "Źródło",
   "textSource": "EMCDDA",
   "textNoteDescription": "Notatka",
-  "textNote": "Z badań grupujących amfetaminę i metamfetaminę przeprowadzonych w 25 krajach UE w latach 2016–2022 wynika, że 1,3 mln młodych dorosłych (w wieku od 15 do 34 lat) zażywało amfetaminę w ciągu ostatniego roku (1,3% tej grupy wiekowej).",
-  "textDataAccess": "Uzyskaj dostęp do danych",
+  "textNote": "Badania przeprowadzone w 25 krajach UE w latach 2016–2022, w których amfetaminę i metamfetaminę łączono ze sobą, wskazują, że 1,3 miliona młodych dorosłych (w wieku 15–34 lat) zażyło amfetaminę w ciągu ostatniego roku (1,3% tej grupy wiekowej).",
+  "textDataAccess": "Dostęp do danych",
   "linkDataAccess": "https://www.emcdda.europa.eu/publications/european-drug-report/2023/synthetic-stimulants_en",
-  "textCountryClick": "Kliknij, aby uzyskać więcej informacji",
-  "extraInfoText_BE": "",
-  "extraInfoLink_BE": "",
-  "extraInfoText_DE": "",
-  "extraInfoLink_DE": "",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "",
-  "extraInfoLink_IT": "",
-  "extraInfoText_LU": "",
-  "extraInfoLink_LU": "",
-  "extraInfoText_PL": "",
-  "extraInfoLink_PL": "",
-  "extraInfoText_RO": "",
-  "extraInfoLink_RO": "",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Kliknij, aby uzyskać więcej informacji"
 }
