--- a/static/languages/pt.json
+++ b/static/languages/pt.json
@@ -1,31 +1,13 @@
 {
-  "heading": "Prevalência do consumo de anfetaminas na Europa",
-  "subheading": "Prevalência do consumo de anfetaminas por jovens adultos (15-34) na Europa em países da União Europeia em 2022",
-  "legend1": "Não há dados disponíveis",
+  "heading": "Prevalência do uso de anfetaminas na Europa",
+  "subheading": "Prevalência do uso de anfetaminas em jovens adultos (15-34) na Europa em países da União Europeia em 2022",
+  "legend1": "Nenhum dado disponível",
   "tooltip1": "de jovens adultos",
   "textSourceDescription": "Fonte",
   "textSource": "OEDT",
   "textNoteDescription": "Observação",
-  "textNote": "Inquéritos que agrupam anfetaminas e metanfetaminas, realizados por 25 países da UE entre 2016 e 2022, sugerem que 1,3 milhões de jovens adultos (15 a 34 anos) consumiram anfetaminas durante o último ano (1,3% deste grupo etário).",
+  "textNote": "Pesquisas que agrupam anfetaminas e metanfetaminas, conduzidas por 25 países da UE entre 2016 e 2022, sugerem que 1,3 milhões de jovens adultos (15 a 34 anos) usaram anfetaminas no último ano (1,3% dessa faixa etária).",
   "textDataAccess": "Acesse os dados",
   "linkDataAccess": "https://www.emcdda.europa.eu/publications/european-drug-report/2023/synthetic-stimulants_en",
-  "textCountryClick": "Clique para mais informações",
-  "extraInfoText_BE": "",
-  "extraInfoLink_BE": "",
-  "extraInfoText_DE": "",
-  "extraInfoLink_DE": "",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "",
-  "extraInfoLink_IT": "",
-  "extraInfoText_LU": "",
-  "extraInfoLink_LU": "",
-  "extraInfoText_PL": "",
-  "extraInfoLink_PL": "",
-  "extraInfoText_RO": "",
-  "extraInfoLink_RO": "",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Clique para mais informações"
 }
