--- a/static/languages/ro.json
+++ b/static/languages/ro.json
@@ -1,31 +1,13 @@
 {
   "heading": "Prevalența consumului de amfetamine în Europa",
-  "subheading": "Prevalența consumului de amfetamine la adulții tineri (15-34) în Europa în țările Uniunii Europene în 2022",
-  "legend1": "Nici o informatie disponibila",
-  "tooltip1": "a adulților tineri",
+  "subheading": "Prevalența consumului de amfetamine în rândul tinerilor adulți (15-34 de ani) în Europa, în țările Uniunii Europene, în 2022",
+  "legend1": "Nu sunt disponibile date",
+  "tooltip1": "de tineri adulți",
   "textSourceDescription": "Sursă",
   "textSource": "OEDT",
-  "textNoteDescription": "Notă",
-  "textNote": "Sondajele, care grupează amfetamina și metamfetamina împreună, efectuate de 25 de țări UE între 2016 și 2022 sugerează că 1,3 milioane de adulți tineri (15 - 34 de ani) au consumat amfetamine în ultimul an (1,3 % din această grupă de vârstă).",
+  "textNoteDescription": "Nota",
+  "textNote": "Sondajele, care grupează amfetamina și metamfetamina, efectuate de 25 de țări ale UE între 2016 și 2022, sugerează că 1,3 milioane de tineri adulți (15-34 de ani) au consumat amfetamine în ultimul an (1,3% din această grupă de vârstă).",
   "textDataAccess": "Accesați datele",
   "linkDataAccess": "https://www.emcdda.europa.eu/publications/european-drug-report/2023/synthetic-stimulants_en",
-  "textCountryClick": "Click pentru mai multe informații",
-  "extraInfoText_BE": "",
-  "extraInfoLink_BE": "",
-  "extraInfoText_DE": "",
-  "extraInfoLink_DE": "",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "",
-  "extraInfoLink_IT": "",
-  "extraInfoText_LU": "",
-  "extraInfoLink_LU": "",
-  "extraInfoText_PL": "",
-  "extraInfoLink_PL": "",
-  "extraInfoText_RO": "",
-  "extraInfoLink_RO": "",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Faceți clic pentru mai multe informații"
 }
