--- a/static/languages/sk.json
+++ b/static/languages/sk.json
@@ -1,31 +1,13 @@
 {
   "heading": "Prevalencia užívania amfetamínov v Európe",
-  "subheading": "Prevalencia užívania amfetamínov u mladých dospelých (15-34) v Európe v krajinách Európskej únie v roku 2022",
+  "subheading": "Prevalencia užívania amfetamínov u mladých dospelých (15 – 34 rokov) v Európe v krajinách Európskej únie v roku 2022",
   "legend1": "Nie sú k dispozícii žiadne údaje",
   "tooltip1": "mladých dospelých",
   "textSourceDescription": "Zdroj",
   "textSource": "EMCDDA",
   "textNoteDescription": "Poznámka",
-  "textNote": "Prieskumy, ktoré v rokoch 2016 až 2022 zoskupili amfetamín a metamfetamín, uskutočnené 25 krajinami EÚ naznačujú, že 1,3 milióna mladých dospelých (15 až 34) užilo amfetamíny počas minulého roka (1,3 % tejto vekovej skupiny).",
+  "textNote": "Prieskumy, ktoré v rokoch 2016 až 2022 vykonalo 25 krajín EÚ a ktoré zoskupujú amfetamín a metamfetamín, naznačujú, že 1,3 milióna mladých dospelých (vo veku 15 až 34 rokov) užilo amfetamíny v poslednom roku (1,3 % tejto vekovej skupiny).",
   "textDataAccess": "Prístup k údajom",
   "linkDataAccess": "https://www.emcdda.europa.eu/publications/european-drug-report/2023/synthetic-stimulants_en",
-  "textCountryClick": "Kliknite pre viac informácií",
-  "extraInfoText_BE": "",
-  "extraInfoLink_BE": "",
-  "extraInfoText_DE": "",
-  "extraInfoLink_DE": "",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "",
-  "extraInfoLink_IT": "",
-  "extraInfoText_LU": "",
-  "extraInfoLink_LU": "",
-  "extraInfoText_PL": "",
-  "extraInfoLink_PL": "",
-  "extraInfoText_RO": "",
-  "extraInfoLink_RO": "",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Kliknite pre viac informácií"
 }
