--- a/static/languages/sv.json
+++ b/static/languages/sv.json
@@ -1,31 +1,13 @@
 {
-  "heading": "Prevalensen av amfetaminanvändning i Europa",
-  "subheading": "Prevalensen av amfetaminanvändning av unga vuxna (15-34) i Europa i länder i Europeiska unionen 2022",
-  "legend1": "Ingen data tillgänglig",
+  "heading": "Förekomst av amfetaminanvändning i Europa",
+  "subheading": "Förekomst av amfetaminanvändning bland unga vuxna (15–34) i Europa i länder i Europeiska unionen år 2022",
+  "legend1": "Inga data tillgängliga",
   "tooltip1": "av unga vuxna",
   "textSourceDescription": "Källa",
-  "textSource": "ECNN",
+  "textSource": "EMCDDA",
   "textNoteDescription": "Notera",
-  "textNote": "Undersökningar, som grupperar amfetamin och metamfetamin tillsammans, utförda av 25 EU-länder mellan 2016 och 2022 tyder på att 1,3 miljoner unga vuxna (15 till 34) använde amfetamin under det senaste året (1,3 % av denna åldersgrupp).",
-  "textDataAccess": "Få åtkomst till data",
+  "textNote": "Undersökningar, som grupperar amfetamin och metamfetamin tillsammans, genomförda av 25 EU-länder mellan 2016 och 2022, tyder på att 1,3 miljoner unga vuxna (15 till 34) använde amfetamin under det senaste året (1,3 % av denna åldersgrupp).",
+  "textDataAccess": "Åtkomst till data",
   "linkDataAccess": "https://www.emcdda.europa.eu/publications/european-drug-report/2023/synthetic-stimulants_en",
-  "textCountryClick": "Klicka för mer info",
-  "extraInfoText_BE": "",
-  "extraInfoLink_BE": "",
-  "extraInfoText_DE": "",
-  "extraInfoLink_DE": "",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "",
-  "extraInfoLink_IT": "",
-  "extraInfoText_LU": "",
-  "extraInfoLink_LU": "",
-  "extraInfoText_PL": "",
-  "extraInfoLink_PL": "",
-  "extraInfoText_RO": "",
-  "extraInfoLink_RO": "",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Klicka för mer information"
 }
