--- a/static/languages/bg.json
+++ b/static/languages/bg.json
@@ -1,31 +1,13 @@
 {
   "heading": "Разпространение на употребата на амфетамини в Европа",
-  "subheading": "Разпространение на употребата на амфетамин сред млади възрастни (15-34) в Европа в страните от Европейския съюз през 2022 г.",
-  "legend1": "Няма данни",
-  "tooltip1": "на млади възрастни",
+  "subheading": "Разпространение на употребата на амфетамини сред млади хора (15-34 години) в Европа в страните от Европейския съюз през 2022 г.",
+  "legend1": "Няма налични данни",
+  "tooltip1": "на млади хора",
   "textSourceDescription": "Източник",
-  "textSource": "EMCDDA",
+  "textSource": "ЕЦМНН",
   "textNoteDescription": "Забележка",
-  "textNote": "Проучвания, които групират амфетамин и метамфетамин заедно, проведени от 25 държави от ЕС между 2016 г. и 2022 г., показват, че 1,3 милиона млади възрастни (15 до 34) са употребявали амфетамини през последната година (1,3 % от тази възрастова група).",
+  "textNote": "Проучвания, проведени от 25 държави от ЕС между 2016 и 2022 г., които групират амфетамини и метамфетамини, показват, че 1,3 милиона млади хора (от 15 до 34 години) са употребявали амфетамини през последната година (1,3% от тази възрастова група).",
   "textDataAccess": "Достъп до данните",
   "linkDataAccess": "https://www.emcdda.europa.eu/publications/european-drug-report/2023/synthetic-stimulants_en",
-  "textCountryClick": "Кликнете за повече информация",
-  "extraInfoText_BE": "",
-  "extraInfoLink_BE": "",
-  "extraInfoText_DE": "",
-  "extraInfoLink_DE": "",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "",
-  "extraInfoLink_IT": "",
-  "extraInfoText_LU": "",
-  "extraInfoLink_LU": "",
-  "extraInfoText_PL": "",
-  "extraInfoLink_PL": "",
-  "extraInfoText_RO": "",
-  "extraInfoLink_RO": "",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Кликнете за повече информация"
 }
