--- a/static/languages/cs.json
+++ b/static/languages/cs.json
@@ -1,31 +1,13 @@
 {
   "heading": "Prevalence užívání amfetaminu v Evropě",
-  "subheading": "Prevalence užívání amfetaminů u mladých dospělých (15-34) v Evropě v zemích Evropské unie v roce 2022",
-  "legend1": "Nejsou k dispozici žádné údaje",
+  "subheading": "Prevalence užívání amfetaminu u mladých dospělých (15–34 let) v Evropě v zemích Evropské unie v roce 2022",
+  "legend1": "Žádné údaje k dispozici",
   "tooltip1": "mladých dospělých",
   "textSourceDescription": "Zdroj",
   "textSource": "EMCDDA",
   "textNoteDescription": "Poznámka",
-  "textNote": "Průzkumy, které sdružují amfetamin a metamfetamin, provedené 25 zeměmi EU v letech 2016 až 2022, naznačují, že v posledním roce užilo amfetaminy 1,3 milionu mladých dospělých (15 až 34 let) (1,3 % této věkové skupiny).",
+  "textNote": "Průzkumy provedené v 25 zemích EU v letech 2016 až 2022, které sdružují amfetamin a metamfetamin, naznačují, že v posledním roce užilo amfetaminy 1,3 milionu mladých dospělých (15 až 34 let) (1,3 % této věkové skupiny).",
   "textDataAccess": "Přístup k datům",
   "linkDataAccess": "https://www.emcdda.europa.eu/publications/european-drug-report/2023/synthetic-stimulants_en",
-  "textCountryClick": "Klikněte pro více informací",
-  "extraInfoText_BE": "",
-  "extraInfoLink_BE": "",
-  "extraInfoText_DE": "",
-  "extraInfoLink_DE": "",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "",
-  "extraInfoLink_IT": "",
-  "extraInfoText_LU": "",
-  "extraInfoLink_LU": "",
-  "extraInfoText_PL": "",
-  "extraInfoLink_PL": "",
-  "extraInfoText_RO": "",
-  "extraInfoLink_RO": "",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Klikněte pro více informací"
 }
