--- a/static/languages/de.json
+++ b/static/languages/de.json
@@ -6,26 +6,8 @@
   "textSourceDescription": "Quelle",
   "textSource": "EBDD",
   "textNoteDescription": "Notiz",
-  "textNote": "Umfragen, die Amphetamin und Methamphetamin zusammenfassen und von 25 EU-Ländern zwischen 2016 und 2022 durchgeführt wurden, deuten darauf hin, dass 1,3 Millionen junge Erwachsene (15 bis 34 Jahre) im letzten Jahr Amphetamine konsumiert haben (1,3 % dieser Altersgruppe).",
-  "textDataAccess": "Greifen Sie auf die Daten zu",
+  "textNote": "Umfragen, bei denen Amphetamin und Methamphetamin zusammengefasst werden und die zwischen 2016 und 2022 von 25 EU-Ländern durchgeführt wurden, deuten darauf hin, dass 1,3 Millionen junge Erwachsene (15 bis 34) im letzten Jahr Amphetamine konsumiert haben (1,3 % dieser Altersgruppe).",
+  "textDataAccess": "Zugriff auf die Daten",
   "linkDataAccess": "https://www.emcdda.europa.eu/publications/european-drug-report/2023/synthetic-stimulants_en",
-  "textCountryClick": "Klicken Sie für weitere Informationen",
-  "extraInfoText_BE": "",
-  "extraInfoLink_BE": "",
-  "extraInfoText_DE": "",
-  "extraInfoLink_DE": "",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "",
-  "extraInfoLink_IT": "",
-  "extraInfoText_LU": "",
-  "extraInfoLink_LU": "",
-  "extraInfoText_PL": "",
-  "extraInfoLink_PL": "",
-  "extraInfoText_RO": "",
-  "extraInfoLink_RO": "",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Klicken Sie hier für weitere Informationen"
 }
