--- a/static/languages/el.json
+++ b/static/languages/el.json
@@ -1,31 +1,13 @@
 {
-  "heading": "Επικράτηση της χρήσης αμφεταμίνης στην Ευρώπη",
-  "subheading": "Επικράτηση της χρήσης αμφεταμίνης σε νεαρούς ενήλικες (15-34) στην Ευρώπη σε χώρες της Ευρωπαϊκής Ένωσης το 2022",
+  "heading": "Επιπολασμός χρήσης αμφεταμινών στην Ευρώπη",
+  "subheading": "Επιπολασμός χρήσης αμφεταμινών από νεαρούς ενήλικες (15-34) στην Ευρώπη σε χώρες της Ευρωπαϊκής Ένωσης το 2022",
   "legend1": "Δεν υπάρχουν διαθέσιμα δεδομένα",
   "tooltip1": "των νεαρών ενηλίκων",
   "textSourceDescription": "Πηγή",
   "textSource": "ΕΚΠΝΤ",
-  "textNoteDescription": "Σημείωση",
-  "textNote": "Έρευνες, οι οποίες ομαδοποιούν την αμφεταμίνη και τη μεθαμφεταμίνη μαζί, που διεξήχθησαν από 25 χώρες της ΕΕ μεταξύ 2016 και 2022 υποδηλώνουν ότι 1,3 εκατομμύρια νέοι ενήλικες (15 έως 34 ετών) έκαναν χρήση αμφεταμινών κατά το τελευταίο έτος (1,3 % αυτής της ηλικιακής ομάδας).",
+  "textNoteDescription": "Σημείωμα",
+  "textNote": "Έρευνες που διεξήχθησαν σε 25 χώρες της ΕΕ μεταξύ 2016 και 2022, οι οποίες ομαδοποιούν την αμφεταμίνη και τη μεθαμφεταμίνη, υποδεικνύουν ότι 1,3 εκατομμύρια νέοι ενήλικες (15 έως 34 ετών) έκαναν χρήση αμφεταμινών κατά τη διάρκεια του τελευταίου έτους (1,3% αυτής της ηλικιακής ομάδας).",
   "textDataAccess": "Πρόσβαση στα δεδομένα",
   "linkDataAccess": "https://www.emcdda.europa.eu/publications/european-drug-report/2023/synthetic-stimulants_en",
-  "textCountryClick": "Κάντε κλικ για περισσότερες πληροφορίες",
-  "extraInfoText_BE": "",
-  "extraInfoLink_BE": "",
-  "extraInfoText_DE": "",
-  "extraInfoLink_DE": "",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "",
-  "extraInfoLink_IT": "",
-  "extraInfoText_LU": "",
-  "extraInfoLink_LU": "",
-  "extraInfoText_PL": "",
-  "extraInfoLink_PL": "",
-  "extraInfoText_RO": "",
-  "extraInfoLink_RO": "",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Κάντε κλικ για περισσότερες πληροφορίες"
 }
