--- a/static/languages/es.json
+++ b/static/languages/es.json
@@ -1,31 +1,13 @@
 {
   "heading": "Prevalencia del consumo de anfetaminas en Europa",
   "subheading": "Prevalencia del consumo de anfetaminas en adultos jóvenes (15-34) en Europa en países de la Unión Europea en 2022",
-  "legend1": "Datos no disponibles",
+  "legend1": "No hay datos disponibles",
   "tooltip1": "de adultos jóvenes",
   "textSourceDescription": "Fuente",
   "textSource": "OEDT",
   "textNoteDescription": "Nota",
-  "textNote": "Las encuestas, que agrupan la anfetamina y la metanfetamina, realizadas en 25 países de la UE entre 2016 y 2022 sugieren que 1,3 millones de adultos jóvenes (de 15 a 34 años) consumieron anfetaminas durante el último año (1,3 % de este grupo de edad).",
-  "textDataAccess": "Accede a los datos",
-  "linkDataAccess": "https://www.emcdda.europa.eu/publications/european-drug-report/2023/synthetic-stimulants_en",
-  "textCountryClick": "Haga clic para más información",
-  "extraInfoText_BE": "",
-  "extraInfoLink_BE": "",
-  "extraInfoText_DE": "",
-  "extraInfoLink_DE": "",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "",
-  "extraInfoLink_IT": "",
-  "extraInfoText_LU": "",
-  "extraInfoLink_LU": "",
-  "extraInfoText_PL": "",
-  "extraInfoLink_PL": "",
-  "extraInfoText_RO": "",
-  "extraInfoLink_RO": "",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textNote": "Las encuestas, que agrupan la anfetamina y la metanfetamina, realizadas en 25 países de la UE entre 2016 y 2022 sugieren que 1,3 millones de adultos jóvenes (de 15 a 34 años) consumieron anfetaminas durante el último año (el 1,3 % de este grupo de edad).",
+  "textDataAccess": "Acceder a los datos",
+  "linkDataAccess": "https://www.emcdda.europa.eu/publications/european-drug-report/2023/synthetic-stimulants_es",
+  "textCountryClick": "Haga clic para más información"
 }
