--- a/static/languages/et.json
+++ b/static/languages/et.json
@@ -1,31 +1,13 @@
 {
-  "heading": "Amfetamiini kasutamise levimus Euroopas",
-  "subheading": "Amfetamiini tarvitamise levimus noortel täiskasvanutel (15–34) Euroopas Euroopa Liidu riikides 2022. aastal",
-  "legend1": "Andmed puuduvad",
-  "tooltip1": "noortest täiskasvanutest",
+  "heading": "Amfetamiini tarvitamise levimus Euroopas",
+  "subheading": "Amfetamiini tarvitamise levimus noorte täiskasvanute (15–34) seas Euroopas Euroopa Liidu riikides 2022. aastal",
+  "legend1": "Andmed pole saadaval",
+  "tooltip1": "noorte täiskasvanute",
   "textSourceDescription": "Allikas",
   "textSource": "EMCDDA",
-  "textNoteDescription": "Märge",
-  "textNote": "Aastatel 2016–2022 25 ELi riigis läbi viidud amfetamiini ja metamfetamiini koos rühmitavad uuringud näitavad, et 1,3 miljonit noort täiskasvanut (15–34) tarvitas viimase aasta jooksul amfetamiini (1,3 % sellest vanuserühmast).",
+  "textNoteDescription": "Märkus",
+  "textNote": "25 ELi riigi poolt aastatel 2016–2022 läbi viidud uuringud, milles amfetamiin ja metamfetamiin on kokku liigitatud, näitavad, et viimase aasta jooksul tarbis amfetamiine 1,3 miljonit noort täiskasvanut (15–34-aastast) (1,3% sellest vanuserühmast).",
   "textDataAccess": "Juurdepääs andmetele",
   "linkDataAccess": "https://www.emcdda.europa.eu/publications/european-drug-report/2023/synthetic-stimulants_en",
-  "textCountryClick": "Lisateabe saamiseks klõpsake",
-  "extraInfoText_BE": "",
-  "extraInfoLink_BE": "",
-  "extraInfoText_DE": "",
-  "extraInfoLink_DE": "",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "",
-  "extraInfoLink_IT": "",
-  "extraInfoText_LU": "",
-  "extraInfoLink_LU": "",
-  "extraInfoText_PL": "",
-  "extraInfoLink_PL": "",
-  "extraInfoText_RO": "",
-  "extraInfoLink_RO": "",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Lisateabe saamiseks klõpsake"
 }
