--- a/static/languages/hu.json
+++ b/static/languages/hu.json
@@ -1,31 +1,13 @@
 {
-  "heading": "Az amfetaminhasználat elterjedtsége Európában",
-  "subheading": "A fiatal felnőttek (15-34 éves) amfetamin-használatának elterjedtsége Európában az Európai Unió országaiban 2022-ben",
-  "legend1": "Nincs elérhető adat",
+  "heading": "Az amfetamin-használat előfordulása Európában",
+  "subheading": "Az amfetamin-használat prevalenciája a fiatal felnőttek (15-34) körében Európában, az Európai Unió országaiban 2022-ben",
+  "legend1": "Nincsenek elérhető adatok",
   "tooltip1": "fiatal felnőttek",
   "textSourceDescription": "Forrás",
   "textSource": "EMCDDA",
-  "textNoteDescription": "jegyzet",
-  "textNote": "Az amfetamint és a metamfetamint együttesen csoportosító, 2016 és 2022 között 25 EU-országban végzett felmérések arra utalnak, hogy 1,3 millió fiatal felnőtt (15-34) használt amfetamint az elmúlt évben (e korcsoport 1,3%-a).",
+  "textNoteDescription": "Jegyzet",
+  "textNote": "Az amfetamint és a metamfetamint egy csoportba soroló, 25 uniós ország által 2016 és 2022 között végzett felmérések szerint 1,3 millió fiatal felnőtt (15 és 34 év közötti) használt amfetamint az elmúlt évben (e korcsoport 1,3%-a).",
   "textDataAccess": "Hozzáférés az adatokhoz",
   "linkDataAccess": "https://www.emcdda.europa.eu/publications/european-drug-report/2023/synthetic-stimulants_en",
-  "textCountryClick": "További információért kattintson",
-  "extraInfoText_BE": "",
-  "extraInfoLink_BE": "",
-  "extraInfoText_DE": "",
-  "extraInfoLink_DE": "",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "",
-  "extraInfoLink_IT": "",
-  "extraInfoText_LU": "",
-  "extraInfoLink_LU": "",
-  "extraInfoText_PL": "",
-  "extraInfoLink_PL": "",
-  "extraInfoText_RO": "",
-  "extraInfoLink_RO": "",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Kattintson a további információkért"
 }
