--- a/static/languages/lv.json
+++ b/static/languages/lv.json
@@ -1,31 +1,13 @@
 {
   "heading": "Amfetamīna lietošanas izplatība Eiropā",
-  "subheading": "Amfetamīna lietošanas izplatība gados jauniem pieaugušajiem (15-34) Eiropā Eiropas Savienības valstīs 2022.",
-  "legend1": "Nav pieejami dati",
-  "tooltip1": "gados jauniem pieaugušajiem",
+  "subheading": "Amfetamīna lietošanas izplatība jauniešu (15–34) vidū Eiropā Eiropas Savienības valstīs 2022. gadā",
+  "legend1": "Dati nav pieejami",
+  "tooltip1": "jauniešu",
   "textSourceDescription": "Avots",
   "textSource": "EMCDDA",
   "textNoteDescription": "Piezīme",
-  "textNote": "Apsekojumi, kuros amfetamīns un metamfetamīns grupēti kopā un ko veica 25 ES valstis no 2016. līdz 2022. gadam, liecina, ka 1,3 miljoni jaunu pieaugušo (no 15 līdz 34 gadiem) pēdējā gada laikā ir lietojuši amfetamīnu (1,3 % no šīs vecuma grupas).",
+  "textNote": "Aptaujas, kurās amfetamīns un metamfetamīns tiek grupēti kopā un kuras 25 ES valstis veica laikā no 2016. līdz 2022. gadam, liecina, ka pēdējā gada laikā 1,3 miljoni jauniešu (vecumā no 15 līdz 34 gadiem) ir lietojuši amfetamīnus (1,3 % no šīs vecuma grupas).",
   "textDataAccess": "Piekļūstiet datiem",
   "linkDataAccess": "https://www.emcdda.europa.eu/publications/european-drug-report/2023/synthetic-stimulants_en",
-  "textCountryClick": "Noklikšķiniet, lai iegūtu vairāk informācijas",
-  "extraInfoText_BE": "",
-  "extraInfoLink_BE": "",
-  "extraInfoText_DE": "",
-  "extraInfoLink_DE": "",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "",
-  "extraInfoLink_IT": "",
-  "extraInfoText_LU": "",
-  "extraInfoLink_LU": "",
-  "extraInfoText_PL": "",
-  "extraInfoLink_PL": "",
-  "extraInfoText_RO": "",
-  "extraInfoLink_RO": "",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Noklikšķiniet, lai iegūtu plašāku informāciju"
 }
