--- a/static/languages/nl.json
+++ b/static/languages/nl.json
@@ -6,26 +6,8 @@
   "textSourceDescription": "Bron",
   "textSource": "EWDD",
   "textNoteDescription": "Opmerking",
-  "textNote": "Uit enquêtes, waarin amfetamine en methamfetamine zijn samengebracht, die tussen 2016 en 2022 door 25 EU-landen zijn uitgevoerd, blijkt dat 1,3 miljoen jongvolwassenen (15 tot 34 jaar) het afgelopen jaar amfetaminen hebben gebruikt (1,3 % van deze leeftijdsgroep).",
+  "textNote": "Uit onderzoeken die tussen 2016 en 2022 in 25 EU-landen zijn uitgevoerd en waarin amfetamine en methamfetamine als één groep worden beschouwd, blijkt dat 1,3 miljoen jongvolwassenen (15 tot 34 jaar) in het afgelopen jaar amfetaminen hebben gebruikt (1,3% van deze leeftijdsgroep).",
   "textDataAccess": "Toegang tot de gegevens",
   "linkDataAccess": "https://www.emcdda.europa.eu/publications/european-drug-report/2023/synthetic-stimulants_en",
-  "textCountryClick": "Klik voor meer informatie",
-  "extraInfoText_BE": "",
-  "extraInfoLink_BE": "",
-  "extraInfoText_DE": "",
-  "extraInfoLink_DE": "",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "",
-  "extraInfoLink_IT": "",
-  "extraInfoText_LU": "",
-  "extraInfoLink_LU": "",
-  "extraInfoText_PL": "",
-  "extraInfoLink_PL": "",
-  "extraInfoText_RO": "",
-  "extraInfoLink_RO": "",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Klik voor meer informatie"
 }
