--- a/static/languages/sl.json
+++ b/static/languages/sl.json
@@ -1,31 +1,13 @@
 {
-  "heading": "Razširjenost uživanja amfetamina v Evropi",
-  "subheading": "Razširjenost uživanja amfetamina pri mladih odraslih (15–34) v Evropi v državah Evropske unije leta 2022",
-  "legend1": "Ni podatkov",
+  "heading": "Razširjenost uporabe amfetaminov v Evropi",
+  "subheading": "Razširjenost uporabe amfetaminov med mladimi odraslimi (15–34 let) v Evropi v državah Evropske unije leta 2022",
+  "legend1": "Ni na voljo podatkov",
   "tooltip1": "mladih odraslih",
   "textSourceDescription": "Vir",
   "textSource": "EMCDDA",
   "textNoteDescription": "Opomba",
-  "textNote": "Raziskave, ki združujejo amfetamin in metamfetamin, ki jih je med letoma 2016 in 2022 izvedlo 25 držav EU, kažejo, da je 1,3 milijona mladih odraslih (15 do 34) v zadnjem letu uživalo amfetamine (1,3 % te starostne skupine).",
-  "textDataAccess": "Dostopajte do podatkov",
+  "textNote": "Raziskave, ki so jih med letoma 2016 in 2022 izvedle 25 držav EU in v katerih sta amfetamin in metamfetamin združena, kažejo, da je v zadnjem letu 1,3 milijona mladih odraslih (od 15 do 34 let) uporabilo amfetamine (1,3 % te starostne skupine).",
+  "textDataAccess": "Dostop do podatkov",
   "linkDataAccess": "https://www.emcdda.europa.eu/publications/european-drug-report/2023/synthetic-stimulants_en",
-  "textCountryClick": "Kliknite za več informacij",
-  "extraInfoText_BE": "",
-  "extraInfoLink_BE": "",
-  "extraInfoText_DE": "",
-  "extraInfoLink_DE": "",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "",
-  "extraInfoLink_IT": "",
-  "extraInfoText_LU": "",
-  "extraInfoLink_LU": "",
-  "extraInfoText_PL": "",
-  "extraInfoLink_PL": "",
-  "extraInfoText_RO": "",
-  "extraInfoLink_RO": "",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Kliknite za več informacij"
 }
